fixing your mess.

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <style>
       body {
-        background-image: url("/static/layered-waves-haikei.svg");
+        background-image: url("/static/bcg.svg");
         background-size: 100% auto;
         background-repeat: no-repeat;
       }
